# inferencer

./: .env  .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  coco_classes.py  inference_worker.py  main.py  notes.txt  pyproject.toml  run_worker.py  setup.py  test_udp_client.py  test_webtransport_client.py  udp_infer_server.py  utils.py  viewer.py  webtransport_bridge.py  webtransport_demo.html
edge/: .gitignore  Makefile  README.md  generate.py  generate_stubs.py  infer_server.py  sensor.py  shim.py
edge/proto/: detection.proto  detection_pb2.py  detection_pb2_grpc.py  infer.proto  infer_pb2.py  infer_pb2_grpc.py
