[project]
name = "inferencer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "onnxruntime-gpu[cuda, cudnn]>=1.23.2",
    "opencv-contrib-python>=4.13.0.90",
    "opencv-python>=4.13.0.90",
    "opencv-python-headless>=4.13.0.90",
    "pillow>=12.1.0",
    "protobuf>=6.33.4",
    "tqdm>=4.67.1",
]
